compiler/weave_syntax/tests/data/syntax/declarations/pattern-matching-0001.error
error: Unexpected tokens
        --> <source>:21:19
         |
      21 |     if (x is E::A y)
         |                   ^
